--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Javascript board game</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <title>4 by 4 board game</title>
+
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<div class="container">
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-		<div class="cover"> <div class="tile"></div> </div>
-	</div>
-	
+<div id="board"></div>
 
+<script type="text/javascript" src="js/script.js"></script>
+<script>restart();</script>
 </body>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script src="js/script.js" type="text/javascript"></script>
-
 </html>
